correcting template typo.

--- a/govcon_examples/modules/example_4_plugin/templates/hello-advanced.html.twig
+++ b/govcon_examples/modules/example_4_plugin/templates/hello-advanced.html.twig
@@ -1,6 +1,6 @@
 {{ kint(text) }}
 {{ kint(sponsor) }}
-{{ kint(pereson) }}
+{{ kint(person) }}
 <div class="block">
   <div class="hello-world">
     <span class="text"></span>
